<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#222"
    tools:context="pw.neiro.android.neon.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/app_name"
            app:srcCompat="@mipmap/icon" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/activity_main_text"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="#313131"
            android:onClick="settingApplication"
            android:text="@string/setting"
            android:textColor="#fff"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button_close"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="#313131"
            android:onClick="finishApplication"
            android:text="@string/close"
            android:textColor="#fff"
            android:textSize="30sp" />
    </LinearLayout>

</RelativeLayout>
